# Pyelog

./: .gitignore  setup.cfg
src/pyelog/: pyelog.py
src/pyelog.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: pyelog_test.py
tests/data/: elog_test.cfg
