[metadata]
name = pyelog
version = 0.0.1
author = Patrick Upson
author_email = upsonp@gmail.com
description = Python package for reading Elog configuration files and loading logbooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/upsonp/pyelog
project_urls =
    Bug Tracker = https://github.com/upsonp/pyelog/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src